fixed gaps in nav

--- a/template.html
+++ b/template.html
@@ -17,6 +17,7 @@
 		<a href="projects.html"><div class="nav-item">Projects</div></a>
 		<a href="resume.pdf"><div class="nav-item">Resume (pdf)</div></a>
 		<a href="https://github.com/larsendt"><div class="nav-item">Github</div></a>
+        <div style="clear: both;"></div>
 	</div>
 	<div class="content">
         {body}
