porting things over from old website

--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
 <body>
 <div class="page-wrapper">
 	<div class="header">
-		<div class="logo-text">larsendt.com</div>
+        <div class="logo-text">larsendt.com | {title}</div>
 	</div>
 	<div class="nav">
 		<a href="index.html"><div class="nav-item">Index</div></a>
