--- a/template.html
+++ b/template.html
@@ -4,11 +4,14 @@
 <meta charset="utf-8">
 <title>{title}</title>
 <link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/photo_disp.js"></script>
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="page-wrapper">
+    <div id="photo-overlay"></div>
 	<div class="header">
         <div class="logo-text">larsendt.com | {title}</div>
 	</div>
