pages now show last modification time

--- a/template.html
+++ b/template.html
@@ -25,6 +25,9 @@
 	<div class="content">
         {body}
     </div>
+    <div class="footer">
+        <p>Updated {timestamp}</p>
+    </div>
 </div>
 </body>
 </html>
