--- a/template.html
+++ b/template.html
@@ -24,6 +24,7 @@
 	</div>
 	<div class="content">
         {body}
+        <div style="clear: both;"></div>
     </div>
     <div class="footer">
         <p>Updated {timestamp}</p>
